<resources>
    <string name="app_name">MDP Group 31</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="explore">Explore</string>
    <string name="fpwaypoint">FP Waypoint</string>
    <string name="robotstart">Robot Start</string>

    <!--        New UI       -->
    <!--  Bluetooth toolbar  -->
    <string name="BTNotConnected">Bluetooth: Not Connected</string>
    <string name="BTConnected">Bluetooth: Connected to %1$s</string>
    <!-- Tab Layout -->
    <string name="TabMap">Map</string>
    <string name="TabCom">Communication</string>
    <!-- Bluetooth -->
    <string name="Bluetooth">Bluetooth</string>
    <string name="PairDevices">Paired Devices</string>
    <string name="AvailableDevices">Available Devices</string>
    <string name="BTDiscover">Make Device Discoverable</string>
    <string name="BTDiscoverOn">Device is currently discoverable</string>
    <string name="BTScan">Scan for devices</string>
    <string name="BTRefresh">Refresh paired devices</string>
    <string name="BTNoPair">No paired devices</string>
    <string name="BTNoAvail">No devices available</string>
    <string name="BTStop">Stop Scanning</string>

    <string name="MapRobotStatus">\u0020Robot Status\u0020</string>
    <string name="MapExpStatus">\u0020Exploration\u0020</string>
    <string name="MapFPTimeStatus">\u0020Fastest Path\u0020</string>
    <string name="MapFPWPStatus">FP Waypoint\u0020</string>
    <string name="MapRSStatus">Robot Position\u0020</string>
<!--    <string name="MapRobotOrien">Orientation:\u0020</string>-->
    <string name="MapChangeRS">Edit Robot Position</string>

    <string-array name="RobotOrientationArray">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>

    <string name="SwitchTilt">Tilt</string>
    <string name="SwitchAU">Map Auto</string>
    <string name="SwitchPlotRP">Set Position</string>
    <string name="SwitchImage">Show Image</string>

    <!-- Map Buttons -->
    <string name="BtnEx">\u0020\u0020\u0020\u0020Explore\u0020\u0020\u0020\u0020</string>
    <string name="BtnFP">FastestPath</string>
    <string name="BtnReset">\u0020\u0020\u0020\u0020\u0020\u0020Reset\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="BtnCali">Calibrate</string>
    <string name="BtnUpM">Update Map</string>
    <string name="BtnWP">\u0020WayPoint</string>
    <string name="BtnRP">\u0020Position\u0020\u0020</string>

    <string name="BtnUp">\nUp\n</string>
    <string name="BtnDown">\nDown\n</string>
    <string name="BtnLeft">\nLeft\n</string>
    <string name="BtnRight">\nRight\n</string>

    <string name="ComTransTxt">\u0020Transmit Text</string>
    <string name="ComTransTxtHelp">Enter Text Here</string>
    <string name="ComRecTxt">\u0020Receive Text</string>
    <string name="ComRecTxtHelp">None</string>
    <string name="ComPersTxt">\u0020Persistent Text</string>
    <string name="ComPersHelp">I\'m non-volatile data</string>
    <string name="ComSend">Send</string>
    <string name="ComClear">Clear</string>
    <string name="ComSave">Save</string>

</resources>