<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Version2.BluetoothActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/btTB"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/BTNotConnected"
        android:textColor="#FFFFFF"
        android:textSize="12sp">

        <TextView
            android:id="@+id/btTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/BTNotConnected"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size"
            android:visibility="visible" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Mapbtmbg"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBluetoothTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/icon_bluetooth"
                android:padding="2dp"
                android:text="@string/Bluetooth"
                android:textAppearance="@style/TextHeading" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvBluetoothTitle"
                android:layout_margin="1dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnDiscover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginTop="10dp"
                android:text="@string/BTDiscover" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPairDTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/PairDevices"
                android:textAppearance="@style/TextSubHeading" />

            <RelativeLayout
                android:id="@+id/BTRL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPairDTitle">

                <TextView
                    android:id="@+id/tvPaired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/BTNoPair"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="visible" />

                <ListView
                    android:id="@+id/lvPairedDevices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="gone" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BTRL1">

                <Button
                    android:id="@+id/btnRefresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/BTRefresh" />

                <ProgressBar
                    android:id="@+id/pbPair"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:elevation="5dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAvailDTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/AvailableDevices"
                android:textAppearance="@style/TextSubHeading" />

            <RelativeLayout
                android:id="@+id/BTRL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAvailDTitle">

                <TextView
                    android:id="@+id/tvAvail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/BTNoAvail"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="visible" />

                <ListView
                    android:id="@+id/lvAvailableDevices"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="gone" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BTRL2">

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/BTScan" />

                <ProgressBar
                    android:id="@+id/pbAvail"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:elevation="5dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
