<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="64"
            android:orientation="horizontal"
            android:weightSum="68">

            <!--map-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="42"
                android:orientation="vertical"
                android:padding="20dp">

                <com.example.mdpandroid.New.MazeView2
                    android:id="@+id/mazeView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:layout_weight="26"
                android:padding="2dp">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tvRS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MapRobotStatus"
                        android:textAppearance="@style/MapStatus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tvRS"
                        android:text="idle"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl1"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tvES"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MapExpStatus"
                        android:textAppearance="@style/MapStatus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tvES"
                        android:text="00:00"
                        android:textSize="15sp" />

                </RelativeLayout>

                <Switch
                    android:id="@+id/switchPlotRP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/switchAutoUp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="1dp"
                    android:text="@string/SwitchPlotRP" />

                <Switch
                    android:id="@+id/switchAutoUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="1dp"
                    android:text="@string/SwitchAU" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="36"
            android:background="@color/Mapbtmbg"
            android:orientation="horizontal"
            android:weightSum="32">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="18">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5.8"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvFPWPTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fpwaypoint"
                        android:textAppearance="@style/TextSubSubHeading" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvFPWPTitle"
                        android:layout_marginLeft="10dp"
                        android:text="(0,0)"
                        android:textSize="15sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/BtnWP" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5.8"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvRSTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/robotstart"
                        android:textAppearance="@style/TextSubSubHeading" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvRSTitle"
                        android:layout_marginLeft="10dp"
                        android:text="(0,0)"
                        android:textSize="15sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/BtnRP" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="6.4">

                    <Button
                        android:id="@+id/btnExplore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="Explore" />

                    <Button
                        android:id="@+id/btnFP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="1dp"
                        android:text="Fastest Path" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="1dp"
                        android:text="Reset" />

                    <Button
                        android:id="@+id/btnCali"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="1dp"
                        android:text="Calibrate" />

                    <Button
                        android:id="@+id/btnUpdateMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="1dp"
                        android:text="@string/BtnUpM" />

                </RelativeLayout>

            </LinearLayout>

            <!--Controls-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:padding="5dp">

                <Switch
                    android:id="@+id/switchTilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/SwitchTilt" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/switchTilt"
                    android:layout_margin="1dp"
                    android:src="@drawable/dpad" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>